# music-agent

./: .gitignore  .gitmodules  README.md  pyproject.toml
.devcontainer/: devcontainer.json
base/core/: alembic.ini  pyproject.toml
base/core/alembic/: README.md  env.py
base/core/alembic/versions/music_info/: 2025_11_18_0001-e62e1a9223da_add_music_info_table.py  2025_11_26_2259-4f7babbea05b_alter_music_info_table.py
base/core/alembic/versions/user_thread/: 2025_11_18_2126-1b8550e0f924_add_table.py
base/core/src/: graph.py
base/core/src/config/: .env  config.py
base/core/src/core/client/: redis.py
base/core/src/core/config/: .env  __init__.py  config.py
base/core/src/core/context/: context.py
base/core/src/core/db/: postgres.py
base/core/src/core/db/models/: __init__.py  base.py  music_info.py  user_thread.py
base/core/src/core/graph/: graph.py
base/core/src/core/langfuse/: langfuse_manager.py  prompt_param.py
base/core/src/core/llm/: llm.py
base/core/src/core/llm/graph/: graph.py
base/core/src/core/llm/langfuse/: langfuse_manager.py  prompt_param.py
base/core/src/core/llm/memory/: postgres.py
base/core/src/core/logger/: logger.py  logger.yaml
base/core/src/core/memory/: async_memory.py  memory.py
base/core/src/core/mi/: miservice.py  player.py
base/core/src/core/middleware/: middleware.py
base/core/src/core/model/: model.py
base/core/src/core/music/: lrcapi.py  model.py  music_metadata.py
base/core/src/core/utils/: ag_ui.py  list_utils.py  snowflake_utils.py  time_utils.py
base/core/src/logger/: logger.py
docs/: uv.md
(+56 files in other folders)
