[project]
name = "music-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.120.0",
    "langchain>=1.0.2",
    "langfuse>=3.8.1",
    "python-dotenv>=1.1.1",
]

[tool.uv.workspace]
members = [
    "agents/suggest",
]

