[project]
name = "music-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv.sources]
core = { workspace = true }
suggest = { workspace = true }
chat = { workspace = true }

[tool.uv.workspace]
members = [
    "agents/*",
    "base/*"
]
