[project]
name = "core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ag-ui-protocol>=0.1.9",
    "colorlog>=6.10.1",
    "fastapi[standard]>=0.120.0",
    "langchain>=1.0.2",
    "langchain-deepseek>=1.0.0",
    "langfuse>=3.8.1",
    "langgraph>=1.0.1",
    "python-dotenv>=1.2.1",
]

[tool.uv.build-backend]
module-name = "core"